--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Scripts -->
-    <script defer src="script.js?v=3"></script>
+    <script defer src="script.js?v=4"></script>
   </head>
 
   <body>
@@ -106,6 +106,7 @@
               <th>Último Capítulo</th>
               <th>Última Consulta</th>
               <th>Progreso</th>
+              <th>Descargados</th>
               <th>Acciones</th>
             </tr>
           </thead>
