--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,8 @@
             <input type="hidden" id="ultimoCapitulo" />
             <input
               type="number"
+              inputmode="decimal"
+              enterkeyhint="done"
               id="capituloActual"
               class="form-control"
               placeholder="Número de capítulo"
